<?xml version="1.0" encoding="utf-8"?>
                   <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    tools:context=".activity.LoginActivity">


    <TextView
        android:id="@+id/textViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/myriad_pro_bold"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <!--LOGIN -->
    <!--Precisa de tudo isso-->
    <FrameLayout
        android:id="@+id/frameIcon1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginRight="-3dp"
            app:cardBackgroundColor="@color/colorMainButton"
            app:cardCornerRadius="3dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v7.widget.CardView>
    </FrameLayout>

    <!--Precisa de tudo isso-->
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameIcon1"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogo">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="-5dp"
            app:cardBackgroundColor="@color/colorAlternateButton"
            app:cardCornerRadius="5dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorPatternCircle"/>
            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.CardView>
    </FrameLayout>


    <!--PASSWORD-->
    <FrameLayout
        android:id="@+id/frameIcon2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameIcon1"
        app:layout_constraintTop_toTopOf="@+id/frameL4">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="-3dp"
            app:cardBackgroundColor="@color/colorMainButton"
            app:cardCornerRadius="3dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v7.widget.CardView>
    </FrameLayout>


    <!--Precisa de tudo isso-->
    <FrameLayout
        android:id="@+id/frameL4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameIcon2"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="-5dp"
            app:cardBackgroundColor="@color/colorAlternateButton"
            app:cardCornerRadius="5dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senha"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorPatternCircle"/>
            </android.support.design.widget.TextInputLayout>


        </android.support.v7.widget.CardView>
    </FrameLayout>

    <TextView
        android:id="@+id/login_text_esqueci_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/esquedi_a_senha"
        android:textSize="18dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameL4"
        android:onClick="onClickEsqueciSenha"/>

    <!--criarConta-->
    <android.support.v7.widget.CardView
        android:id="@+id/login_bt_cardview_criar_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:padding="10dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/colorAlternateButton"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClickBtCardView">

        <TextView
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/criar_conta"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

    <!--Login-->
    <android.support.v7.widget.CardView
        android:id="@+id/login_bt_cardview_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/colorMainButton"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClickBtCardView">
        <TextView
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>