<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    >
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activity.DashboardActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/tudo_q_v_precisa"
            android:textColor="@color/colorWhite"
            android:textSize="32sp" />

        <!--Linha 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <!--Receber-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_view_receber"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/colorCardView"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/circle_to_cardview"
                        android:padding="30dp"
                        android:contentDescription="@string/receber" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="2dp"
                        android:background="@color/colorWhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/receber"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <!--Depositar-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_view_depositar"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/colorCardView"
                app:cardCornerRadius="16dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/circle_to_cardview"
                        android:contentDescription="@string/depositar"
                        android:padding="30dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="2dp"
                        android:background="@color/colorWhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/depositar"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <!--Linha 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <!--Depositar-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_view_ganhos"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/colorCardView"
                app:cardCornerRadius="16dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/circle_to_cardview"
                        android:contentDescription="@string/ganhos_do_dia"
                        android:padding="30dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="2dp"
                        android:background="@color/colorWhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/ganhos_do_dia"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/card_view_historico"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/colorCardView"
                app:cardCornerRadius="16dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/circle_to_cardview"
                        android:contentDescription="@string/historico"
                        android:padding="30dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="2dp"
                        android:background="@color/colorWhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/historico"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <!--Linha 3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <!--Depositar-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_view_relatorio"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/colorCardView"
                app:cardCornerRadius="16dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/circle_to_cardview"
                        android:contentDescription="@string/receber"
                        android:padding="30dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="2dp"
                        android:background="@color/colorWhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/receber"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/card_view_configuracoes"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/colorCardView"
                app:cardCornerRadius="16dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/circle_to_cardview"
                        android:contentDescription="@string/configuracoes"
                        android:padding="30dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="2dp"
                        android:background="@color/colorWhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/configuracoes"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>


    </LinearLayout>
</ScrollView>

</RelativeLayout>